[tool.poetry]
name = "libcsce"
version = "0.1.0"
description = "Cobalt Strike configuration extractor and parser library and scripts."
authors = ["Noah Rubin <noah.rubin@strozfriedberg.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/strozfriedberg/cobaltstrike-config-extractor"
keywords = ["malware", "rem", "cobalt strike", "parser"]
packages = [{ include = "libcsce" }]

[tool.poetry.dependencies]
python = "^3.6"
pefile = ">=2019.4.18"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.8.0"
pytest = "^6.2.3"
sphinx = "^4.0"
sphinx-autodoc-typehints = "^1.12"
sphinx-rtd-theme = "^0.5"

[tool.poetry.scripts]
csce = "libcsce.bin.csce:main"
list-cs-settings = "libcsce.bin.list_cs_settings:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
